--- a/sconv/locale/en/LC_MESSAGES/gui.po
+++ b/sconv/locale/en/LC_MESSAGES/gui.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2016-12-26 17:58+0100\n"
-"PO-Revision-Date: 2016-12-26 17:58+0100\n"
+"POT-Creation-Date: 2017-01-09 23:31+0100\n"
+"PO-Revision-Date: 2017-01-09 23:32+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -76,6 +76,14 @@ msgstr "To"
 #: ../lib\gui.py:157
 msgid "Convert"
 msgstr "Convert"
+
+#: ../lib\core\temperature.py:89
+msgid "Incorrect"
+msgstr "Incorrect"
+
+#: ../lib\core\temperature.py:89
+msgid "value"
+msgstr "value"
 
 #~ msgid "Super Converter version 0.1"
 #~ msgstr "Super Converter version 0.1"
