--- a/sconv/locale/es/LC_MESSAGES/gui.po
+++ b/sconv/locale/es/LC_MESSAGES/gui.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2016-12-26 17:59+0100\n"
-"PO-Revision-Date: 2016-12-26 18:04+0100\n"
+"POT-Creation-Date: 2017-01-09 23:31+0100\n"
+"PO-Revision-Date: 2017-01-09 23:31+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -76,6 +76,14 @@ msgstr "A"
 #: ../lib\gui.py:157
 msgid "Convert"
 msgstr "Convertir"
+
+#: ../lib\core\temperature.py:89
+msgid "Incorrect"
+msgstr "Incorrecto"
+
+#: ../lib\core\temperature.py:89
+msgid "value"
+msgstr "valor"
 
 #~ msgid "Super Converter version 0.1"
 #~ msgstr "Super Converter versión 0.1"
