--- a/sconv/locale/fr/LC_MESSAGES/gui.po
+++ b/sconv/locale/fr/LC_MESSAGES/gui.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2016-12-26 18:03+0100\n"
-"PO-Revision-Date: 2016-12-26 18:03+0100\n"
+"POT-Creation-Date: 2017-01-09 23:32+0100\n"
+"PO-Revision-Date: 2017-01-09 23:32+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -76,3 +76,11 @@ msgstr "À"
 #: ../lib\gui.py:157
 msgid "Convert"
 msgstr "Convertir"
+
+#: ../lib\core\temperature.py:89
+msgid "Incorrect"
+msgstr "Incorrecte"
+
+#: ../lib\core\temperature.py:89
+msgid "value"
+msgstr "valeur"
